# repetitive-code-detector

./: .gitignore  CMakeLists.txt  build.sh  common.h  main.cpp
FileType/: FileType.cpp  FileType.h
FileType/Specific/: FileType_CSharp.cpp  FileType_CSharp.h  FileType_Lua.cpp  FileType_Lua.h  FileType_Shader.cpp  FileType_Shader.h
Utils/: util.h
Utils/Model/: SA.cpp  SA.h  ST.cpp  ST.h
